# spirit-island-template

./: .gitignore  README.md  pyproject.toml
_global/css/: card.css
_global/css/board_front/: growth-options.css
_global/js/: board_front.js
spirit_cli/: __init__.py  art.py  bootstrap.py  compiler.py  html_builder.py  models.py  print_layout.py
spirit_cli/cli/: __init__.py  art.py  base.py  bootstrap.py  compile.py  display.py  print_layout.py
spirit_cli/cli/assets/: logo_image.txt  logo_text.txt
spirit_cli/cli/assets/style_references/: README.md
spirit_cli/templates/: adversary.html.j2  aspect.html.j2  base.html.j2  board_front.html.j2  board_lore.html.j2  card.html.j2  card_back.html.j2
spirits/filaments-that-bind-the-living-soil/: board_front.yaml  board_lore.yaml  card_back.yaml  feed-the-defenders.yaml  rot-consumes-from-within.yaml  spores-drift-on-humid-air.yaml  symbiotic-offering.yaml  threads-beneath-the-roots.yaml
